Allow custom matchers to explain their diff.